--- a/OngProject/Templates/email_template.html
+++ b/OngProject/Templates/email_template.html
@@ -294,9 +294,9 @@
                       <div
                         style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
                         <p style="text-align: center;"><span
-                            style="font-size: 24px;"><strong>T&iacute;tulo</strong></span></p>
+                            style="font-size: 24px;"><strong>#T&iacute;tulo#</strong></span></p>
                         <p style="text-align: center;">&nbsp;</p>
-                        <p style="text-align: center;"><span style="font-size: 16px;">Texto del email</span></p>
+                        <p style="text-align: center;"><span style="font-size: 16px;">#Content#</span></p>
                       </div>
 
                     </td>
@@ -321,7 +321,7 @@
 
                       <div
                         style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
-                        <p style="text-align: center;">Datos de contacto de ONG</p>
+                        <p style="text-align: center;">#ContactInfo#</p>
                       </div>
 
                     </td>
